k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: junsong
  labels:
    app.kubernetes.io/part-of: junsong-cloud
